--- a/src/main/resources/templates/admin/tables/drugs-table.html
+++ b/src/main/resources/templates/admin/tables/drugs-table.html
@@ -10,9 +10,24 @@
 <body>
     <header th:insert="blocks/headers :: header-admin-page"></header>
 
-    <div class="container mt-5 mb-5">
-        <h1>Список лекарств, доступных пользователям для выбора</h1>
+    <div class="container mt-5 mb-5 text-center">
+        <h1>Список лекарств, доступных пользователям для выбора</h1><br>
         
+        <a href="/adminpage/drug/add" class="btn btn-success">Добавить</a><br><br> 
+
+        <table class="table table-bordered table-hover" style="width: 40%; margin: 0 auto;">
+            <thead>
+                <th>№</th>
+                <th>Название</th>
+            </thead>
+            <tbody>
+                <tr th:each="d, iter : ${drugs}"> 
+                    <td th:text="${iter.index}+1"></td>
+                    <td th:text="${d.name}"></td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
 
     <div th:insert="blocks/footer :: footer"></div>
