--- a/src/main/resources/templates/admin/tables/drugs-table.html
+++ b/src/main/resources/templates/admin/tables/drugs-table.html
@@ -5,6 +5,8 @@
     <title>Drugs</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -13,14 +15,18 @@
     <div class="container mt-5 mb-5 text-center">
         <h1>Список лекарств, доступных пользователям для выбора</h1><br>
         
-        <a href="/adminpage/drug/add" class="btn btn-success">Добавить</a><br><br> 
+        <div class="row" style="width: 40%; margin: 0 auto;">
+            <a href="/adminpage/drug/add" class="btn btn-success">Добавить</a>   
+            <input class="form-control ml-4" id="inputFilter" type="text" placeholder="Поиск" style="width: 72%;">
+        </div>
+        <br>
 
         <table class="table table-bordered table-hover" style="width: 40%; margin: 0 auto;">
             <thead>
                 <th>№</th>
                 <th>Название</th>
             </thead>
-            <tbody>
+            <tbody id="drugsTable">
                 <tr th:each="d, iter : ${drugs}"> 
                     <td th:text="${iter.index}+1"></td>
                     <td th:text="${d.name}"></td>
@@ -31,6 +37,18 @@
     </div>
 
     <div th:insert="blocks/footer :: footer"></div>
+
+    <script>
+        $(document).ready(function(){
+          $("#inputFilter").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#drugsTable tr").filter(function() {
+              $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+          });
+        });
+    </script>
+
 </body>
 
 </html>
