--- a/src/main/resources/templates/user/drugs/drugs-data.html
+++ b/src/main/resources/templates/user/drugs/drugs-data.html
@@ -5,6 +5,8 @@
     <title>Drugs</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -12,34 +14,54 @@
     <header th:insert="blocks/headers :: header-user-page"></header>
 
     <div class="container mt-5 text-center">
-        <h1 class="text-center"> Ваши лекарства </h1>
-
-        <br><a href="/drugs/add" class="btn btn-success">Добавить лекарство</a><br><br>
+        <h1 class="text-center"> Ваши лекарственные средства </h1><br>
 
         <div th:if="${drugs}">
+            <div class="row">
+                <div class="col-md-3"><a href="/drugs/add" class="btn btn-success float-left">Добавить лекарство</a></div>
+                <div class="col-md-3"></div>
+                <div class="col-md-6"><input class="form-control" id="inputFilter" onkeyup="filterFunction()" type="text" placeholder="Поиск"></div>
+            </div>
+            <br>
+
             <table class="table table-bordered table-hover">
                 <thead>
                     <th th:each="h : ${headers}" th:text="${h}"/>
                 </thead>
-                <tbody>
+                <tbody id="drugsTable">
                     <tr th:each="d, iter : ${drugs}"> 
-                        <td th:text="${iter.index}+1"></td>
-                        <td th:text="${d.drug.name}"></td>
-                        <td th:text="${d.dose}"></td>
-                        <td th:text="${d.period}"></td>
-                        <td th:text="${d.startDate}"></td>
-                        <td th:text="${d.endDate}"></td>
+                        <td class="filterData" th:text="${iter.index}+1"></td>
+                        <td class="filterData" th:text="${d.drug.name}"></td>
+                        <td class="filterData" th:text="${d.dose}"></td>
+                        <td class="filterData" th:text="${d.period}"></td>
+                        <td class="filterData" th:text="${d.startDate}"></td>
+                        <td class="filterData" th:text="${d.endDate}"></td>
+                        <td><a th:href="'/drugs/' + ${d.id}">Подробнее</a></td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <div th:unless="${drugs}">
-            <p> Нет выбранных лекарств для ведения отметок </p>
+            <a href="/drugs/add" class="btn btn-success">Добавить лекарство</a><br><br>
+            <div class="alert alert-secondary" role="alert">
+                <b>Нет выбранных лекарств для ведения отметок</b>
+            </div>            
         </div>
 
     </div>
    
     <div th:insert="blocks/footer :: footer"></div>
+
+    <script> 
+        $(document).ready(function(){
+          $("#inputFilter").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#drugsTable tr").filter(function() {
+              $(this).toggle($(this).children('.filterData').text().toLowerCase().indexOf(value) > -1)
+            });
+          });
+        });
+    </script>
 
 </body>
 </html>
