--- a/src/main/resources/templates/admin/tables/drugs-table.html
+++ b/src/main/resources/templates/admin/tables/drugs-table.html
@@ -12,12 +12,17 @@
 <body>
     <header th:insert="blocks/headers :: header-admin-page"></header>
 
-    <div class="container mt-5 mb-5 text-center">
-        <h1>Список лекарств, доступных пользователям для выбора</h1><br>
+    <div class="container mt-4 text-center">
+        <h2>Список доступных лекарственных средств</h2><br>
         
         <div class="row" style="width: 40%; margin: 0 auto;">
             <a href="/adminpage/drug/add" class="btn btn-success">Добавить</a>   
-            <input class="form-control ml-4" id="inputFilter" type="text" placeholder="Поиск" style="width: 72%;">
+            <input class="form-control ml-4" id="inputFilter" type="text" placeholder="Поиск" style="width: 63%;">
+            <button type="button" class="btn btn-outline-secondary" id="clearButton">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"></path>
+                </svg>
+            </button>
         </div>
         <br>
 
@@ -47,6 +52,11 @@
             });
           });
         });
+
+        document.getElementById("clearButton").onclick = function(e) {
+            document.getElementById("inputFilter").value = "";
+            $("#inputFilter").keyup();
+        }
     </script>
 
 </body>
