--- a/src/main/resources/templates/user/drugs/drug-add.html
+++ b/src/main/resources/templates/user/drugs/drug-add.html
@@ -14,9 +14,8 @@
 <body>
     <header th:insert="blocks/headers :: header-user-page"></header>
 
-    <div class="container mt-5 mb-5 text-center">
-        <h1>Добавление нового лекарства для отслеживания</h1>
-        <br>
+    <div class="container mt-4 text-center">
+        <h2>Добавление нового лекарства для отслеживания</h2><br>
 
         <form th:action="@{/drugs/add}" method="post" th:object="${personDrug}" style="display: inline-block; width: 30rem;">  
             <input type="hidden" th:field="*{person}"/>
@@ -56,14 +55,11 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-success">Добавить</button>
-
-            <a href="/drugs" class="btn btn-secondary">Отмена</a>
+            <br><button type="submit" class="btn btn-success mr-4" style="width: 120px;">Добавить</button>
+            <a href="/drugs" class="btn btn-secondary" style="width: 120px;">Отмена</a>
         </form>
 
     </div>
-
-    <div th:insert="blocks/footer :: footer"></div>
 
     <script th:inline="javascript">
         $(function() {
