--- a/src/main/resources/templates/user/drugs/drug-details.html
+++ b/src/main/resources/templates/user/drugs/drug-details.html
@@ -5,8 +5,6 @@
     <title>Drug Marks</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-
-
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -22,8 +20,8 @@
             <thead>
                 <th>Дозировка</th>
                 <th>Периодичность приема</th>
-                <th>Дата начала приема</th>
-                <th>Дата завершения приема</th>
+                <th>Дата начала периода</th>
+                <th>Дата завершения периода</th>
             </thead>
             <tbody>
                 <tr> 
@@ -50,7 +48,7 @@
                                 <th>№</th>
                                 <th>Дата</th>
                                 <th>Номер приема за день</th>
-                                <th>Ваша отметка о лекарстве</th>
+                                <th>Статус приема</th>
                             </thead>
                             <tbody>
                                 <tr th:each="m : ${marks}">
@@ -104,21 +102,30 @@
 <style>
 
     .scrollable-table {
-        height: 450px;
+        height: 442px;
         overflow-y: auto;
+        scroll-snap-type: y mandatory;
     }
 
     .myTable thead {
         background-color:rgb(227, 253, 253);
         position: sticky;
-        top: 0;
+        top: -1px;
     }
 
     .myTable thead::before {
         content: '';
         position: absolute;
-        top: 0; left: 0; right: 0; bottom: 0;
-        border: 1px solid rgb(224, 226, 226); 
+        top: -1px; left: 0; right: 0; bottom: 0;
+        border-bottom: 1px solid rgb(224, 226, 226); 
+    } 
+
+    .scrollable-table {
+        border-top: 1px solid rgb(224, 226, 226); 
+    } 
+
+    .myTable tr {
+        scroll-snap-align: start;
     }
 
 </style>
