--- a/src/main/resources/templates/admin/drug-add.html
+++ b/src/main/resources/templates/admin/drug-add.html
@@ -5,6 +5,7 @@
     <title>Add drug</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/inputGroupText.css" />
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
         <form th:action="@{/adminpage/drug/add}" method="post" th:object="${drug}" style="display: inline-block; width: 25rem;">  
 
-            <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
+            <div class="text-justify" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
             <div class="form-group row">
                 <label class="input-group-text">Название</label>
                 <div class="col"> <input type="text" th:field="*{name}" class="form-control" placeholder="Название" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> </div>
@@ -29,13 +30,4 @@
     </div>
 
 </body>
-
-<style>
-
-    .input-group-text {
-        width: 30%;
-    }
-
-</style>
-
 </html>
