--- a/src/main/resources/templates/admin/tables/drugs-table.html
+++ b/src/main/resources/templates/admin/tables/drugs-table.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/scrollTable.css" />
 </head>
 
 <body>
@@ -26,22 +27,21 @@
         </div>
         <br>
 
-        <table class="table table-bordered table-hover" style="width: 40%; margin: 0 auto;">
-            <thead>
-                <th>№</th>
-                <th>Название</th>
-            </thead>
-            <tbody id="drugsTable">
-                <tr th:each="d, iter : ${drugs}"> 
-                    <td th:text="${iter.index}+1"></td>
-                    <td th:text="${d.name}"></td>
-                </tr>
-            </tbody>
-        </table>
-
+        <div class="scrollable-table" style="width: 40%; margin: 0 auto;">
+            <table class="table table-bordered table-hover myTable">
+                <thead>
+                    <th>№</th>
+                    <th>Название</th>
+                </thead>
+                <tbody id="drugsTable">
+                    <tr th:each="d, iter : ${drugs}"> 
+                        <td th:text="${iter.index}+1"></td>
+                        <td th:text="${d.name}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-
-    <div th:insert="blocks/footer :: footer"></div>
 
     <script>
         $(document).ready(function(){
@@ -60,5 +60,4 @@
     </script>
 
 </body>
-
 </html>
