--- a/src/main/resources/templates/user/drugs/drug-add.html
+++ b/src/main/resources/templates/user/drugs/drug-add.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/inputGroupText.css" />
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             <input type="hidden" th:field="*{person}"/>
             <input type="hidden" th:field="*{drug}"/>
 
-            <div style="color:red" th:if="${#fields.hasErrors('drug')}" th:errors="*{drug}">drug Error</div>
+            <div class="text-justify" th:if="${#fields.hasErrors('drug')}" th:errors="*{drug}">drug Error</div>
             <div class="form-group row">
                 <label class="input-group-text">Лекарство</label>
                 <div class="col">
@@ -37,13 +38,13 @@
 
             <div style="color:red" th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}">startDate Error</div> 
             <div class="form-group row">
-                <label class="input-group-text myLabel">Дата начала приема</label>
+                <label class="input-group-text myLabel">Дата начала периода</label>
                 <div class="col"> <input type="date" th:field="*{startDate}" class="form-control" th:min="${minDate}" th:max="${maxDate}"/> </div> 
             </div>
 
             <div style="color:red" th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}">endDate Error</div> 
             <div class="form-group row">
-                <label class="input-group-text myLabel">Дата завершения приема</label>
+                <label class="input-group-text myLabel">Дата завершения периода</label>
                 <div class="col"> <input type="date" th:field="*{endDate}" class="form-control" th:min="${minDate}" th:max="${maxDate}"/> </div>
             </div>
 
@@ -79,10 +80,6 @@
 </body>
 
 <style>
-
-    .input-group-text {
-        width: 30%;
-    }
 
     .myLabel {
         width: 45%;
