--- a/src/main/resources/templates/user/drugs/drug-details.html
+++ b/src/main/resources/templates/user/drugs/drug-details.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/scrollTable.css" />
 </head>
 
 <body>
@@ -98,36 +99,4 @@
     </script>
 
 </body>
-
-<style>
-
-    .scrollable-table {
-        height: 442px;
-        overflow-y: auto;
-        scroll-snap-type: y mandatory;
-    }
-
-    .myTable thead {
-        background-color:rgb(227, 253, 253);
-        position: sticky;
-        top: -1px;
-    }
-
-    .myTable thead::before {
-        content: '';
-        position: absolute;
-        top: -1px; left: 0; right: 0; bottom: 0;
-        border-bottom: 1px solid rgb(224, 226, 226); 
-    } 
-
-    .scrollable-table {
-        border-top: 1px solid rgb(224, 226, 226); 
-    } 
-
-    .myTable tr {
-        scroll-snap-align: start;
-    }
-
-</style>
-
 </html>
