--- a/src/main/resources/templates/user/drugs/drugs-data.html
+++ b/src/main/resources/templates/user/drugs/drugs-data.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/scrollTable.css" />
 </head>
 
 <body>
@@ -24,22 +25,24 @@
             </div>
             <br>
 
-            <table class="table table-bordered table-hover">
-                <thead>
-                    <th th:each="h : ${headers}" th:text="${h}"/>
-                </thead>
-                <tbody id="drugsTable">
-                    <tr th:each="d, iter : ${drugs}"> 
-                        <td class="filterData" th:text="${iter.index}+1"></td>
-                        <td class="filterData" th:text="${d.drug.name}"></td>
-                        <td class="filterData" th:text="${d.dose}"></td>
-                        <td class="filterData" th:text="${d.period}"></td>
-                        <td class="filterData" th:text="${d.startDate}"></td>
-                        <td class="filterData" th:text="${d.endDate}"></td>
-                        <td><a th:href="'/drugs/' + ${d.id}">Подробнее</a></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="scrollable-table">
+                <table class="table table-bordered table-hover myTable">
+                    <thead>
+                        <th th:each="h : ${headers}" th:text="${h}"/>
+                    </thead>
+                    <tbody id="drugsTable">
+                        <tr th:each="d, iter : ${drugs}"> 
+                            <td class="filterData" th:text="${iter.index}+1"></td>
+                            <td class="filterData" th:text="${d.drug.name}"></td>
+                            <td class="filterData" th:text="${d.dose}"></td>
+                            <td class="filterData" th:text="${d.period}"></td>
+                            <td class="filterData" th:text="${d.startDate}"></td>
+                            <td class="filterData" th:text="${d.endDate}"></td>
+                            <td><a th:href="'/drugs/' + ${d.id}">Подробнее</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div th:unless="${drugs}">
             <a href="/drugs/add" class="btn btn-success">Добавить лекарство</a><br><br>
@@ -49,8 +52,6 @@
         </div>
 
     </div>
-   
-    <div th:insert="blocks/footer :: footer"></div>
 
     <script> 
         $(document).ready(function(){
