--- a/src/main/resources/templates/user/drugs/drug-add.html
+++ b/src/main/resources/templates/user/drugs/drug-add.html
@@ -17,7 +17,7 @@
     <header th:insert="blocks/headers :: header-user-page"></header>
 
     <div class="container mt-4 text-center">
-        <h2>Добавление нового лекарства для отслеживания</h2><br>
+        <h2>Добавление нового лекарства для отслеживания приемов</h2><br>
 
         <form th:action="@{/drugs/add}" method="post" th:object="${personDrug}" style="display: inline-block; width: 30rem;">  
             <input type="hidden" th:field="*{person}"/>
@@ -27,7 +27,7 @@
             <div class="form-group row">
                 <label class="input-group-text">Лекарство</label>
                 <div class="col">
-                    <input type="text" id="inputName" name="drugname" class="form-control"th:value="${name}" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()" placeholder="Название"/> 
+                    <input type="text" id="inputName" name="drugname" class="form-control" th:value="${name}" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()" placeholder="Название"/> 
                 </div>
             </div>
 
@@ -64,17 +64,19 @@
     </div>
 
     <script th:inline="javascript">
-        $(function() {
-    
-        /*<![CDATA[*/ var names = /*[[ ${names} ]]*/ 'names' /*]]*/;
-        //var array = [[${drugs}]];
 
-        $( "#inputName" ).autocomplete({
-            source: names,
-            minLength: 0
+        $(function() {
+            /*<![CDATA[*/ var names = /*[[ ${names} ]]*/ 'names' /*]]*/;
+            $("#inputName").autocomplete({
+                source: names,
+                minLength: 0
+            });
+
+            $("#inputName").click(function() {                      
+                $("#inputName").autocomplete("search");
+            });
         });
-    
-    });
+
     </script>
 
 </body>
@@ -89,7 +91,6 @@
         max-height: 220px;
         overflow-y: auto;
         overflow-x: hidden;
-        padding-right: 20px;
     }
 
 </style>
