--- a/src/main/resources/templates/user/drugs/drug-add.html
+++ b/src/main/resources/templates/user/drugs/drug-add.html
@@ -39,13 +39,13 @@
             <div style="color:red" th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}">startDate Error</div> 
             <div class="form-group row">
                 <label class="input-group-text myLabel">Дата начала периода</label>
-                <div class="col"> <input type="date" th:field="*{startDate}" class="form-control" th:min="${minDate}" th:max="${maxDate}"/> </div> 
+                <div class="col"> <input type="date" th:field="*{startDate}" class="form-control" th:min="${drugDateBorders[0]}" th:max="${drugDateBorders[1]}"/> </div> 
             </div>
 
             <div style="color:red" th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}">endDate Error</div> 
             <div class="form-group row">
                 <label class="input-group-text myLabel">Дата завершения периода</label>
-                <div class="col"> <input type="date" th:field="*{endDate}" class="form-control" th:min="${minDate}" th:max="${maxDate}"/> </div>
+                <div class="col"> <input type="date" th:field="*{endDate}" class="form-control" th:min="${drugDateBorders[0]}" th:max="${drugDateBorders[1]}"/> </div>
             </div>
 
             <div class="form-group row">
